--- a/style-guide-layout.html
+++ b/style-guide-layout.html
@@ -1,6 +1,7 @@
 ---
 #jekyll front matter
 
+layout: style-guide
 title: Web style guide
 bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/queenberry_floor_landingLive.jpg
