--- a/courses.html
+++ b/courses.html
@@ -19,10 +19,11 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
                         <form action="" method="get">
                             <fieldset>
                                 <legend>Filter by:</legend>
-                                <label><input type="checkbox" value="Research"> Research</label>
-                                <label><input type="checkbox" value="Masters"> Masters</label>
-                                <label><input type="checkbox" value="GradCert"> Graduate Certificates</label>
-                                <label><input type="checkbox" value="GradCert"> Professional Certificates</label>
+                                <label class="doctors"><input type="checkbox" value="Doctors"> Doctorate/PhD</label>
+                                <label class="masters"><input type="checkbox" value="Masters"> Masters</label>
+                                <label class="gradcert"><input type="checkbox" value="GradCert"> Graduate Certificates</label>
+                                <label class="profcert"><input type="checkbox" value="ProfCert"> Professional Certificates</label>
+                                <label class="research"><input type="checkbox" value="Research"> Research degrees</label>
                             </fieldset>
                         </form>
                     </section>
@@ -86,7 +87,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
 
                     <section class="theme clearfix">
                         <div class="left">
-                            <h2>Clinical Teaching</h2>
+                            <h2>Clinical Teaching for educators</h2>
                         </div>
                         <div class="right">
                             <ul class="course-list">
@@ -102,7 +103,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
 
                     <section class="theme clearfix">
                         <div class="left">
-                            <h2>Generalist Studies</h2>
+                            <h2>General Studies in Education</h2>
                         </div>
                         <div class="right">
                             <ul class="course-list">
@@ -186,7 +187,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0009/1862163/stu
 
                     <section class="theme clearfix">
                         <div class="left">
-                            <h2>Leadership and management</h2>
+                            <h2>Leadership and Management</h2>
                         </div>
                         <div class="right">
                             <ul class="course-list">
