--- a/index.html
+++ b/index.html
@@ -5,22 +5,15 @@ title: Prototype
 bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0019/1862011/default-hero-image.jpg
 ---
-        <div class="main-content-wrapper">
-            <!-- Breadcrumbs -->
-            <div role="navigation" class="breadcrumbs">
-                {% include aboutBreadcrumbs.html %}
-            </div>
-            <!-- End breadcrumbs -->
-            <div id="main-content" class="main" role='main'>
-                <h1 class="title">{{ page.title }}</h1>
 
-                <!-- Add your site or application content here -->
-                <p><a href="style-guide-layout.html">Style Guide</a></p>
+<p><a href="style-guide/style-guide-layout.html">Style Guide</a></p>
 
-                <p><a href="home-page.html">Home Page</a></p>
+<p><a href="home-page.html">Home Page</a></p>
 
-                <p><a href="level1-page.html">Landing Page</a></p>
+<p><a href="about-us/index.html">Landing Page</a></p>
 
-                <p><a href="research-centre.html">Research centre</a></p>
+<p><a href="research/research-centre.html">Research centre</a></p>
 
-                <p><a href="events.html">Events</a></p>
+<p><a href="news-and-activities/events.html">Events</a></p>
+
+<p><a href="study-with-us/courses.html">Courses</a></p>
