--- a/news-and-activities/events.html
+++ b/news-and-activities/events.html
@@ -6,16 +6,8 @@ title: Events
 bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0008/1068776/research_landing_live.jpg
 ---
-<div class="main-content-wrapper">
-            <!-- Breadcrumbs -->
-            <div role="navigation" class="breadcrumbs">
 
-                <a href="http://education.unimelb.edu.au" rel="home">MGSE</a> <span class="divider"><i class="fa fa-angle-right"></i></span> <a href="http://education.unimelb.edu.au/news_and_activities">News and Activities</a> <span class="divider"><i class="fa fa-angle-right"></i></span> <a href="http://education.unimelb.edu.au/news_and_activities/events">Events</a>
-            </div>
-            <!-- End breadcrumbs -->
-            <div id="main-content" class="main" role='main'>
-		                <h1>Events</h1>
-                <div class="controls">
+<div class="controls">
     <dl class="filters-nav__list">
         <dt>Filter events:</dt>
         <dd><a class="filter" data-filter="all">All</a></dd>
@@ -28,34 +20,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0008/1068776/res
     </dl>
 </div>
 <div class="article" id="container">
-<div class="event seminars mix">
-    <div class="details">
-        <p><i class="fa fa-calendar"></i> 25 May 2016<br>
-           <i class="fa fa-clock-o"></i> 5.30-7pm</p>
-    </div>
-    <div class="description">
-        <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/seminars/seminars_current/heavier-than-air-experiences-of-lgbtq-teachers-represented-through-performance">Heavier than Air: Experiences of LGBTQ teachers represented through performance</a></h2>
-        <p>With the explosion of interest in the experiences of young people at school, it was only a matter of time until we turned our eyes to the experiences of lesbian, gay, bisexual, transgender and queer-identified (LGBTQ) teachers. &lsquo;Heavier than Air&rsquo; involves animating transcripts from real-life teachers and asks audience members to critically consider the &lsquo;performance&rsquo; of being an LGBTQ teacher in today&rsquo;s schools.</p>
-    </div>
-</div><div class="event seminars mix">
-    <div class="details">
-        <p><i class="fa fa-calendar"></i> 25 May 2016<br>
-           <i class="fa fa-clock-o"></i> 4-5pm</p>
-    </div>
-    <div class="description">
-        <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/seminars/seminars_current/who-should-govern-education">Who should govern education?</a></h2>
-        <p>The Social Transformation and Education Research Hub invites you to the third in the series of panel seminars.</p>
-    </div>
-</div><div class="event seminars mix">
-    <div class="details">
-        <p><i class="fa fa-calendar"></i> 25 May 2016<br>
-           <i class="fa fa-clock-o"></i> 6-7pm</p>
-    </div>
-    <div class="description">
-        <h2><a href="https://www.eventbrite.com.au/e/centre-for-positive-psychology-public-lecture-series-2016-dr-aaron-jarden-tickets-23757275651">A new, easier and more effective pathway to wellbeing</a></h2>
-        <p>The <a href="http://education.unimelb.edu.au/cpp">Centre for Positive Psychology</a> hosts its second public lecture for 2016 presented by Dr Aaron Jarden, Senior Lecturer, Psychology, Auckland University of Technology (AUT) and President of the New Zealand Association of Positive Psychology.</p><p>At this presentation Dr Aaron Jarden proposes and outlines a novel and largely unexplored pathway to wellbeing &ndash; simplifying your life.&nbsp;&nbsp;The notion of simplification challenges the very essence of the existing paradigm which is to add activities to one&rsquo;s life (to be more, to do more) and has the potential to be one of the most effective and efficient pathways to enhancing wellbeing.</p>
-    </div>
-</div><div class="event future student mix">
+<div class="event future student mix">
     <div class="details">
         <p><i class="fa fa-calendar"></i> 30 May - 6 June 2016<br>
            <i class="fa fa-clock-o"></i> see event</p>
@@ -66,12 +31,21 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0008/1068776/res
     </div>
 </div><div class="event seminars mix">
     <div class="details">
-        <p><i class="fa fa-calendar"></i> 31 May 2016<br>
-           <i class="fa fa-clock-o"></i> 6-7pm</p>
+        <p><i class="fa fa-calendar"></i> 15 Jun 2016<br>
+           <i class="fa fa-clock-o"></i> 4 - 5pm</p>
     </div>
     <div class="description">
-        <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/dean_lecture_series/current/workforce-literacy-and-factories-of-the-future">Workforce literacy and factories of the future </a></h2>
-        <h3>Dean's Lecture Series 2016</h3><h3>Presented by Professor Lesley Farrell</h3><p>The rise of robotics in manufacturing requires workers to have sophisticated literacy skills so they can direct machines and join up innovation and production networks. With machines doing the work that people used to do, the way products are imagined, developed, produced and distributed is being transformed, creating new work for people.</p>
+        <h2><a href="https://unimelb_governance.eventbrite.com.au/">How the University of Melbourne operates: governance, structure and roles</a></h2>
+        <p>Professor Rachel Webster, President of the Academic Board, explains everything you wanted to know about the University of Melbourne big picture.&nbsp;&nbsp;This session will consist of 15-20 minutes of presentation and 30 minutes of questions and discussion.<br /> <br />For any queries, please contact Peggy Kern (<a href="mailto:Peggy.Kern@unimelb.edu.au">Peggy.Kern@unimelb.edu.au</a>)</p>
+    </div>
+</div><div class="event future student mix">
+    <div class="details">
+        <p><i class="fa fa-calendar"></i> 15 Jun 2016<br>
+           <i class="fa fa-clock-o"></i> 6 - 7pm</p>
+    </div>
+    <div class="description">
+        <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/events_for_future_students/future_student_event_current/master-of-teaching-information-sessions-2016">Master of Teaching (Secondary) Internship Information session</a></h2>
+        <div id="content_div_834347"><p>In this session, you&rsquo;ll hear from the <a href="http://education.unimelb.edu.au/study_with_us/become_a_teacher">Master of Teaching</a> Program Coordinator as they share information about the course structure, our unique placement model, entry requirements and how to apply. You will also find out what it's really like to be a Master of Teaching student from one of our current students.</p><p>Staff will be available afterwards to speak one-on-one and answer your questions.</p><p>The Master of Teaching (Secondary) Internship will be our first session, where you can get paid to teach while studying for your degree; which commences November 2016.</p></div>
     </div>
 </div><div class="event seminars mix">
     <div class="details">
@@ -109,15 +83,6 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0008/1068776/res
         <h2><a href="http://melbourne-cshe.unimelb.edu.au/events/fast-track-orientation-for-senior-academics">Fast track orientation for senior academics</a></h2>
         <p>A formal Welcome to the University for new senior academic staff members. Orientation offers the opportunity to familiarise yourself as a senior staff member with the University of Melbourne's scholarly community, as, well as to create networks with colleagues. For academic staff levels D and beyond.</p>
     </div>
-</div><div class="event seminars mix">
-    <div class="details">
-        <p><i class="fa fa-calendar"></i> 30 Aug 2016<br>
-           <i class="fa fa-clock-o"></i> 3.30-4.30pm</p>
-    </div>
-    <div class="description">
-        <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/seminars/seminars_current/yrc/be-the-change-you-want-to-see-in-the-world-youth-social-action-in-india">"Be the change you want to see in the world”: Youth social action in India</a></h2>
-        <p>Youth Research Centre Seminar Series 2016</p><p>Professor Craig Jeffrey, Director, Australia India Institute, University of Melbourne, and Dr Jane Dyson, School of Geography, University of Melbourne</p>
-    </div>
 </div><div class="event free lecture mix">
     <div class="details">
         <p><i class="fa fa-calendar"></i> 30 Aug 2016<br>
@@ -126,6 +91,15 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0008/1068776/res
     <div class="description">
         <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/dean_lecture_series/current/professor-linda-smith">Professor Linda Smith</a></h2>
         <h3>Dean's Lecture Series 2016</h3><h3>Presented by Professor Linda Smith</h3>
+    </div>
+</div><div class="event seminars mix">
+    <div class="details">
+        <p><i class="fa fa-calendar"></i> 30 Aug 2016<br>
+           <i class="fa fa-clock-o"></i> 3.30-4.30pm</p>
+    </div>
+    <div class="description">
+        <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/seminars/seminars_current/yrc/be-the-change-you-want-to-see-in-the-world-youth-social-action-in-india">"Be the change you want to see in the world”: Youth social action in India</a></h2>
+        <p>Youth Research Centre Seminar Series 2016</p><p>Professor Craig Jeffrey, Director, Australia India Institute, University of Melbourne, and Dr Jane Dyson, School of Geography, University of Melbourne</p>
     </div>
 </div><div class="event seminars mix">
     <div class="details">
@@ -145,6 +119,15 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0008/1068776/res
         <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/seminars/seminars_current/yrc/friends-in-high-places-following-young-lives-in-the-indian-himalayas">Friends in high places: Following young lives in the Indian Himalayas</a></h2>
         <p>Youth Research Centre Seminar Series 2016</p><p>Dr Jane Dyson, School of Geography, University of Melbourne</p>
     </div>
+</div><div class="event future student mix">
+    <div class="details">
+        <p><i class="fa fa-calendar"></i> 15 Sep 2016<br>
+           <i class="fa fa-clock-o"></i> 6 - 7pm</p>
+    </div>
+    <div class="description">
+        <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/events_for_future_students/future_student_event_current/master-of-teaching-information-sessions-2016">Master of Teaching (Secondary) Information session</a></h2>
+        <p>In this session, you&rsquo;ll hear from the <a href="http://education.unimelb.edu.au/study_with_us/become_a_teacher">Master of Teaching</a> Program Coordinator as they share information about the course structure, our unique placement model, entry requirements and how to apply. You will also find out what it's really like to be a Master of Teaching student from one of our current students.</p><p>Staff will be available afterwards to speak one-on-one and answer your questions.</p>
+    </div>
 </div><div class="event conference mix">
     <div class="details">
         <p><i class="fa fa-calendar"></i> 17 - 21 Sept 2016<br>
@@ -153,6 +136,24 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0008/1068776/res
     <div class="description">
         <h2><a href="http://conference2016.aes.asn.au/index.php?option=com_content&view=featured&Itemid=101">International Evaluation Conference</a></h2>
         <p>The Australasian Evaluation Society is holding their annual international evaluation conference in Perth from 17 to 21 September 2016. Delegates will reflect on what diversity and change in social, cultural, organisational, environmental, political and economic landscapes means for evaluation and evaluators.</p>
+    </div>
+</div><div class="event future student mix">
+    <div class="details">
+        <p><i class="fa fa-calendar"></i> 22 Sep 2016<br>
+           <i class="fa fa-clock-o"></i> 5.30 - 6:30pm</p>
+    </div>
+    <div class="description">
+        <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/events_for_future_students/future_student_event_current/master-of-teaching-information-sessions-2016">Master of Teaching (Early Childhood) Information session</a></h2>
+        <p>In this session, you&rsquo;ll hear from the <a href="http://education.unimelb.edu.au/study_with_us/become_a_teacher">Master of Teaching</a> Program Coordinator as they share information about the course structure, our unique placement model, entry requirements and how to apply. You will also find out what it's really like to be a Master of Teaching student from one of our current students.</p><p>Staff will be available afterwards to speak one-on-one and answer your questions.</p>
+    </div>
+</div><div class="event future student mix">
+    <div class="details">
+        <p><i class="fa fa-calendar"></i> 22 Sep 2016<br>
+           <i class="fa fa-clock-o"></i> 7 - 8pm</p>
+    </div>
+    <div class="description">
+        <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/events_for_future_students/future_student_event_current/master-of-teaching-information-sessions-2016">Master of Teaching (Primary) Information session</a></h2>
+        <p>In this session, you&rsquo;ll hear from the <a href="http://education.unimelb.edu.au/study_with_us/become_a_teacher">Master of Teaching</a> Program Coordinator as they share information about the course structure, our unique placement model, entry requirements and how to apply. You will also find out what it's really like to be a Master of Teaching student from one of our current students.</p><p>Staff will be available afterwards to speak one-on-one and answer your questions.</p>
     </div>
 </div><div class="event conference mix">
     <div class="details">
@@ -181,6 +182,15 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0008/1068776/res
         <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/seminars/seminars_current/yrc/belonging-and-the-uses-of-difference-young-people-in-australian-urban-multiculture">Belonging and the uses of difference: Young people in Australian urban multiculture</a></h2>
         <p>Youth Research Centre Seminar Series 2016</p><p>Professor Anita Harris, Alfred Deakin Institute for Citizenship and Globalisation, Deakin University</p>
     </div>
+</div><div class="event seminars mix">
+    <div class="details">
+        <p><i class="fa fa-calendar"></i> 24 Nov 2016<br>
+           <i class="fa fa-clock-o"></i> 3:30-4:30pm</p>
+    </div>
+    <div class="description">
+        <h2><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/seminars/seminars_current/yrc/researching-body-image-visual-and-sensory-methodologies,-affect-and-multiplicity">Researching body image: Visual and sensory methodologies, affect and multiplicity</a></h2>
+        <p>Youth Research Centre Seminar Series 2016</p><p>Dr Rebecca Coleman, Goldsmiths University of London</p>
+    </div>
 </div><div class="event free lecture mix">
     <div class="details">
         <p><i class="fa fa-calendar"></i> 29 Nov 2016<br>
@@ -198,11 +208,6 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0008/1068776/res
 <h2>Spotlight</h2>
 <div>
     
-    <p><a href="https://www.eventbrite.com.au/e/centre-for-positive-psychology-public-lecture-series-2016-dr-aaron-jarden-tickets-23757275651">A new, easier and more effective pathway to wellbeing</a><br>
-    25 May 2016, 6-7pm</p>
-</div>
-<div>
-    
     <p><a href="http://education.unimelb.edu.au/news_and_activities/events/meet-the-academic">Meet the Academic </a><br>
     30 May - 6 June 2016, see event</p>
 </div>
@@ -215,11 +220,11 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0008/1068776/res
 <h4>Next Dean's Lecture</h4>
 <div>
     <figure>
-        <img src="http://education.unimelb.edu.au/__data/assets/image/0011/1931069/Photo-on-16-04-2016-at-122-1-crop-200x200-for-web.jpg" alt="Lesley Farrell">
-        <figcaption>Professor Lesley Farrell</figcaption>
+        <img src="http://education.unimelb.edu.au/__data/assets/image/0008/1947797/John-Hattie_Pursuit-avatar_web-200-x-200.jpg" alt="John Hattie">
+        <figcaption>Laureate Professor John Hattie</figcaption>
     </figure>
-    <p><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/dean_lecture_series/current/workforce-literacy-and-factories-of-the-future">Workforce literacy and factories of the future </a><br>
-    31 May 2016</p>  
+    <p><a href="http://education.unimelb.edu.au/news_and_activities/events/upcoming_events/dean_lecture_series/current/professor-john-hattie">Shifting away from distractions to improve Australia's schools</a><br>
+    21 June 2016</p>  
 </div>
 <a class="button--go" href="http://education.unimelb.edu.au/news_and_activities/events/deans_lecture_series">View all Dean's Lectures</a>
 </div>
