--- a/style-guide/style-guide-components.html
+++ b/style-guide/style-guide-components.html
@@ -6,24 +6,9 @@ title: Web style guide
 bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/queenberry_floor_landingLive.jpg
 ---
-        <div class="main-content-wrapper">
-            <!-- Breadcrumbs -->
-            <div role="navigation" class="breadcrumbs">
-                {%include styleGuideBreadcrumbs.html %}
-            </div>
-            <!-- End breadcrumbs -->
-            <div id="main-content" class="main" role='main'>
-                <h1 class="title">{{ page.title }}</h1>
 
-                <nav class="style-guide-nav">
-    <ul>
-        <li><a href="http://education.unimelb.edu.au/style-guide">Home</a></li>
-        <li><a href="http://education.unimelb.edu.au/style-guide/layout">Layout</a></li>
-        <li><a href="http://education.unimelb.edu.au/style-guide/navigation">Navigation</a></li>
-        <li><a href="http://education.unimelb.edu.au/style-guide/typography">Typography</a></li>
-        <li><a href="http://education.unimelb.edu.au/style-guide/components" class="current">Components</a></li>
-    </ul>
-</nav>
+{%include  style-guide-nav.html %}
+
 <p><a href="#buttons">Buttons</a> |
 <a href="#tables">Tables</a> |
 <a href="#images">Images</a> |
