--- a/style-guide/style-guide-layout.html
+++ b/style-guide/style-guide-layout.html
@@ -3,6 +3,7 @@
 
 layout: style-guide
 title: Web style guide
+sub-title: Layout
 bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/queenberry_floor_landingLive.jpg
 ---
@@ -184,7 +185,6 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
 </code>
     </pre>
 </div>
-                
 <h3 class="style-guide">Special 1/2 layout</h3>
 <p>The special 1/2 layout is used for profile banks</p>
 
