--- a/style-guide/style-guide-navigation.html
+++ b/style-guide/style-guide-navigation.html
@@ -3,6 +3,7 @@
 
 layout: style-guide
 title: Web style guide
+sub-title: Navigation
 bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/queenberry_floor_landingLive.jpg
 ---
@@ -12,11 +13,11 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
 <h2 class="style-guide">Breadcrumbs</h2>
 
 <div role="navigation" class="breadcrumbs">
-  <a href="<!-- @path index.html -->" rel="home">MGSE</a>
+  <a href="" rel="home">MGSE</a>
   <span class="divider"><i class="fa fa-angle-right"></i></span>
-  <a href="<!-- @path level1-page.html -->">About us</a>
+  <a href="">About us</a>
   <span class="divider"><i class="fa fa-angle-right"></i></span>
-  <a href="<!-- @path level1-page.html -->">Message from the Dean</a>
+  <a href="">Message from the Dean</a>
 </div>
 
 <h2 class="style-guide">Level 2 page preview</h2>
@@ -72,16 +73,19 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
 
 <h2 class="style-guide">Sub-site page preview</h2>
 
-<div class="preview-vertical">
-    <div>
-        <img src="http://placehold.it/185x185" alt="">
-        <h2><a href="#">Experts</a></h2>
-        <p>Discover our YRC experts, who provide supervision for Masters and PhD students.  View professional and academic staff profiles for a detailed look at expertise and interests, as well as contact information.</p>
-    </div>
-    <div>
-        <img src="http://education.unimelb.edu.au/__data/assets/image/0008/1292885/YRC_Projects_landing.jpg" alt="">
-        <h2><a href="#">Research programs and projects</a></h2>
-        <p>Explore the YRC’s research and consultancy team projects.  Research projects include consultations with young people, organisations, youth workers and parents.  This experience combines theoretical analysis and direct practical work.</p>
+<div class="article">
+    <div class="preview-vertical">
+        <h2>More about YRC</h2>
+        <div>
+            <img src="http://placehold.it/185x185">
+            <h3><a href="#">Experts</a></h3>
+            <p>Discover our YRC experts, who provide supervision for Masters and PhD students.  View professional and academic staff profiles for a detailed look at expertise and interests, as well as contact information.</p>
+        </div>
+        <div>
+            <img src="http://education.unimelb.edu.au/__data/assets/image/0008/1292885/YRC_Projects_landing.jpg">
+            <h3><a href="#">Research programs and projects</a></h3>
+            <p>Explore the YRC’s research and consultancy team projects.  Research projects include consultations with young people, organisations, youth workers and parents.  This experience combines theoretical analysis and direct practical work.</p>
+        </div>
     </div>
 </div>
 
@@ -98,7 +102,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                 <p>Description</p>
             </div>
             <footer>
-                <a href="#" class="explore">Explore</a>
+                <a class="explore">Explore</a>
             </footer>
         </div>
     </div>
@@ -112,7 +116,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                 <p>This project will examine symbol use, a key aspect of students’ mathematical experience at school and university, and measure its impact on progression rates.</p>
             </div>
             <footer>
-                <a href="#" class="explore">Explore</a>
+                <a class="explore">Explore</a>
             </footer>
         </div>
     </div>
@@ -126,21 +130,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                 <p>This project, known as REAP, involves exploration of the trend of students in the upper quartile of student achievement not showing learning gains at the same rate as their peers.</p>
             </div>
             <footer>
-                <a href="#" class="explore">Explore</a>
-            </footer>
-        </div>
-    </div>
-    <div>
-        <div class="card highlight">
-            <header>
-                <img src="/img/shaping-minds.jpg" alt="">
-            </header>
-            <div class="card-main">
-                <h2>Shaping Minds, Shaping the World 2015</h2>
-                <p>For an overview of our research activity, download our yearly publication: Shaping Minds, Shaping the World 2015.</p>
-            </div>
-            <footer>
-                <a href="#" class="explore">Download (PDF, 7.6Mb)</a>
+                <a class="explore">Explore</a>
             </footer>
         </div>
     </div>
@@ -154,7 +144,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                 <p>This program of research commenced in 2007 at the Assessment Research Centre under the leadership of Professor Patrick Griffin, and since then has drawn on the collaborative work of many educators, researchers, and administrators who share a commitment to supporting every student's right to learn.</p>
             </div>
             <footer>
-                <a href="#" class="explore">Explore</a>
+                <a class="explore">Explore</a>
             </footer>
         </div>
     </div>
@@ -168,7 +158,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                 <p>The major objective of the study is to understand how learning achievement unfolds in very different contexts with the intention of informing curriculum design, classroom practices, assessment processes and teacher professional development at the national level and especially in ARMM.</p>
             </div>
             <footer>
-                <a href="#" class="explore">Explore</a>
+                <a class="explore">Explore</a>
             </footer>
         </div>
     </div>
@@ -182,7 +172,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                 <p>A qualitative study investigating the influence of International Baccalaureate programs on the lives of alumni.</p>
             </div>
             <footer>
-                <a href="#" class="explore">Explore</a>
+                <a class="explore">Explore</a>
             </footer>
         </div>
     </div>
@@ -196,7 +186,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                 <p>Teachers’ application of arts rich practice: teaching in and through the arts</p>
             </div>
             <footer>
-                <a href="#" class="explore">Explore</a>
+                <a class="explore">Explore</a>
             </footer>
         </div>
     </div>
@@ -210,7 +200,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                 <p>Research to inform the development of an integrated program of assessment, reporting, and teaching advice for children and young people whose learning is supported by the Victorian Department of Education and Training (DET).</p>
             </div>
             <footer>
-                <a href="#" class="explore">Explore</a>
+                <a class="explore">Explore</a>
             </footer>
         </div>
     </div>
@@ -224,7 +214,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                 <p>The Philippines is facing a rapidly changing education system, associated changes in assessment and curriculum systems at national, regional and local levels, and a need for empirical data on curriculum innovation and implementation.</p>
             </div>
             <footer>
-                <a href="#" class="explore">Explore</a>
+                <a class="explore">Explore</a>
             </footer>
         </div>
     </div>
