--- a/style-guide/style-guide-components.html
+++ b/style-guide/style-guide-components.html
@@ -3,6 +3,7 @@
 
 layout: style-guide
 title: Web style guide
+sub-title: Components
 bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/queenberry_floor_landingLive.jpg
 ---
