--- a/style-guide/style-guide-typography.html
+++ b/style-guide/style-guide-typography.html
@@ -3,6 +3,7 @@
 
 layout: style-guide
 title: Web style guide
+sub-title: Typography
 bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/queenberry_floor_landingLive.jpg
 ---
@@ -148,8 +149,6 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
       <dd>Description value</dd>
       <dt>Description name</dt>
       <dd>Description value</dd>
-      <dd>Description value</dd>
-      <dt>Description name</dt>
       <dt>Description name</dt>
       <dd>Description value</dd>
     </dl>
